--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>biwashpradhan</title>
+	<title>biwashpradhan | Web developer and student</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="My Portfolio" />
+	<meta name="description" content="Biwash Pradhan is a Web developer. He has worked on different projects and focus on buolding amazing experiences for the customers." />
 	<meta name="keywords" content="biwash, best portfolio, bewas, pradhan, biwashpradhan, bewas pradhan, biwash shrestha, biwash stha"/>
 	<meta name="author" content="Portfolio" />
+	<meta name="robots" content="index,follow">
+	<link rel="icon" href="images/avatar.jpg">
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
