--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 			<div class="row">
 				
 				<div class="col-md-6 text-center col-padding">
-					<h2>Hello There!</h2>
-					<p>I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. Meeting new people who support all my effort and work provide me a lot of enery and develops me more passion into my work. I build amazing experiences.</p>
+					<h2>Hello Everyone</h2>
+					<p>I am the person who is positive about every aspect of life. There are many things that I like to do, to see, and to experience too in my life. Meeting new people who support all my effort and work provide me a lot of enery and develops me more passion into my work. I build amazing experiences.</p>
 					<p>While graduating I acquired project and time management skills, as well as the ability to communicate with team members and clients while effectively meeting milestones and deadlines. I have worked on a few beginner level to intermediate level projects based on web development, python, c++.</p>
 				</div>
 					<div class="col-md-6 text-center col-padding">
