--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background:url(images/user-3.jpg);"></div>
-							<h1><span>Biwash Prdhan</span></h1>
+							<h1><span>Biwash Pradhan</span></h1>
 							<h3><span>Web Developer / Student</span></h3>
 							<br/>
 							<h3 style="color: #494964"><span>FOLLOW ME ON SOCIAL MEDIA</span></h3>
@@ -84,7 +84,7 @@
 				
 				<div class="col-md-6 text-center col-padding">
 					<h2>Hello Everyone</h2>
-					<p>I am the person who is positive about every aspect of life. There are many things that I like to do, to see, and to experience too in my life. Meeting new people who support all my effort and work provide me a lot of enery and develops me more passion into my work. I build amazing experiences.</p>
+					<p>I am the person who is positive about every aspect of life. There are many things that I like to do, to see, and to experience too in my life. Meeting new people who support all my effort and work provide me a lot of enery and develops me more passion into my work. Here I build amazing experiences.</p>
 					<p>While graduating I acquired project and time management skills, as well as the ability to communicate with team members and clients while effectively meeting milestones and deadlines. I have worked on a few beginner level to intermediate level projects based on web development, python, c++.</p>
 				</div>
 					<div class="col-md-6 text-center col-padding">
